/*
 * Copyright (C) 2020 Grakn Labs
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 *
 */

// A migration service protocol to activate and monitor migrations remotely.
// Backwards compatibility is currently not enforced on this protocol

syntax = "proto3";

option java_package = "grakn.core.server.migrator.proto";
option java_outer_classname = "MigratorProto";

import "server/migrator/proto/data.proto";

package migrator;

service Migrator {
  rpc exportData (ExportData.Req) returns (stream Job.Res);
  rpc importData (ImportData.Req) returns (stream Job.Res);
}

message ExportData {
  message Req {
    string database = 1;
    string filename = 2;
  }
}

message Job {
  message Res {
    Progress progress = 1;
  }

  message Progress {
    uint64 total = 1;
    uint64 current = 2;
  }
}

message ImportData {
  message Req {
    string database = 1;
    string filename = 2;
    map<string, string> remap_labels = 3;
  }
}
